package org.example.TicTacToe.entities;

public enum GameCondition {
    IN_PROGRESS,
    ENDED
}
